# Montre_connectee

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: mimxrt1170_evk_mimxrt1176_cm7.conf  nrf5340dk_nrf5340_cpuapp.overlay
inc/: bluetooth.h  button.h  chronometer.h  debug.h  hts221.h  lis2mdl.h  lsm6dso.h  queue.h  rtc.h  sensorTimers.h  sensors.h  temp_queue.h  timSec.h  touch_screen.h  ui_Screen6.h
src/: main.c  rtc.c  shell_cmds.c
src/bluetooth/: bluetooth.c
src/interupts/: button.c
src/rtc/: rtc.c  shell_cmds.c
src/sensors/: hts221.c  lis2mdl.c  lsm6dso.c  sensorTimers.c  sensors.c
src/timers/: sensorTimers.c  timSec.c
src/touchScreen/: touch_screen.c
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image1.c  ui_comp_image1.h
src/ui/images/: ui_img_1780325426.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_step_png.c  ui_img_weather_cloud_fog_png.c  ui_img_weather_cloud_png.c  ui_img_weather_sun_cloud_png.c  ui_img_weather_sun_png.c
src/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen8.h
